--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
-
 /* Your CSS Code here. */
+.moviePic{
+	height:20px;
+	width:50px;
+	opacity:0.7;
+}
+.movieDetail{
+	position:absolute;
+	top:350px;
+	width:auto;
+	text-align:center;
+	font-size:large;
+}
